# utils

./: CMakeLists.txt  LICENSE  README.md  install.sh
include/anders/: logg.h  macros.h  math.h  matrix.h  types.h  util.h  vector.h
src/: logg.c  math.c  matrix.c  vector.c
